--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <div id="app">
     <div class="nav-bar"></div>
 
+    <div class="cart">Cart({{ cart }})</div>
+
     <div class="product-display">
       <div class="product-container">
         <div class="product-image">
@@ -21,9 +23,13 @@
         </div>
         <div class="product-info">
           <h1>{{ product }}</h1>
-          <p v-if="inventory > 10">In Stock</p>
-          <p v-else-if="inventory <= 10 && inventory > 0">Almost sold out!</p>
+          <p v-if="inStock">In Stock</p>
           <p v-else>Out of Stock</p>
+          <ul>
+            <li v-for="detail in details">{{ detail }}</li>
+          </ul>
+          <div v-for="variant in variants" :key="variant.id">{{ variant.color }}</div>
+          <button class="button" v-on:click="cart += 1">Add to Cart</button>
         </div>
       </div>
     </div>
